--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 /* Base */
 /* ----------------------------------------------------------*/
-
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +8,7 @@
 html, body { height: 100%; }
 
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 300;
