--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 html, body { height: 100%; }
 
 body {
-  
+
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.5;
@@ -41,17 +41,17 @@ a:visited { color: #205caa; }
 /* Site header */
 
 .site-header {
-  border-top: 5px solid #333;
+  border-top: 5px solid #191919;
   border-bottom: 1px solid #e8e8e8;
   min-height: 56px;
-  background-color: white;
+  background-color: #191919;
 }
 
 .site-title,
 .site-title:hover,
 .site-title:visited {
   display: block;
-  color: #333;
+  color: #fefefe;
   font-size: 26px;
   letter-spacing: -1px;
   float: left;
@@ -69,7 +69,7 @@ a:visited { color: #205caa; }
 
 .site-nav .page-link {
   margin-left: 20px;
-  color: #727272;
+  color: #fefefe;
   letter-spacing: -.5px;
 }
 
