--- a/css/main.css
+++ b/css/main.css
@@ -222,7 +222,8 @@ a:visited { color: #205caa; }
 }
 
 .post-content ul,
-.post-content ol { padding-left: 20px; }
+
+.post-content ol { padding-left: 2em; }
 
 .post pre,
 .post code {
