--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,8 @@ a:visited { color: #205caa; }
   border-radius: 3px;
   font-size: 15px;
   overflow:auto;
+  font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+}
 }
 
 .post code { padding: 1px 5px; }
