--- a/css/main.css
+++ b/css/main.css
@@ -226,6 +226,7 @@ a:visited { color: #205caa; }
 .post-content ol { padding-left: 2em; }
 
 .post pre,
+
 .post code {
   border: 1px solid #d5d5e9;
   background-color: #f6f8fa;
@@ -233,7 +234,7 @@ a:visited { color: #205caa; }
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
-  font-size: 15px;
+  font-size: 16px;
   overflow:auto;
   font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
 }
@@ -249,6 +250,7 @@ a:visited { color: #205caa; }
   border: 0;
   padding-right: 0;
   padding-left: 0;
+  font-size: 85%;
 }
 
 /* terminal */
