--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@
 /* ----------------------------------------------------------*/
 * {
   margin: 0;
-  padding: 0;
+  padding: 0
+  margin-top:12px;
 }
 
 html, body { height: 100%; }
